--- a/src/main/resources/com/example/fim_7wonderarchjavafx/NbrOfPlayer-View.fxml
+++ b/src/main/resources/com/example/fim_7wonderarchjavafx/NbrOfPlayer-View.fxml
@@ -2,21 +2,32 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fim_7wonderarchjavafx.NbrOfPlayerController">
    <children>
-      <Label alignment="CENTER" layoutX="152.0" layoutY="91.0" prefHeight="38.0" prefWidth="296.0" text="Combien êtes vous a jouer?">
-         <font>
-            <Font name="System Italic" size="23.0" />
-         </font>
-      </Label>
-      <Button layoutX="90.0" layoutY="187.0" mnemonicParsing="false" onMouseClicked="#on2PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="2" />
-      <Button layoutX="160.0" layoutY="187.0" mnemonicParsing="false" onMouseClicked="#on3PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="3" />
-      <Button layoutX="230.0" layoutY="187.0" mnemonicParsing="false" onMouseClicked="#on4PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="4" />
-      <Button layoutX="300.0" layoutY="187.0" mnemonicParsing="false" onMouseClicked="#on5PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="5" />
-      <Button layoutX="374.0" layoutY="187.0" mnemonicParsing="false" onMouseClicked="#on6PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="6" />
-      <Button layoutX="448.0" layoutY="187.0" mnemonicParsing="false" onMouseClicked="#on7PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="7" />
+      <AnchorPane layoutX="24.0" layoutY="5.0" prefHeight="720.0" prefWidth="1200.0">
+         <children>
+            <ImageView fitHeight="778.0" fitWidth="1379.0" layoutX="-137.0" layoutY="-11.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/BackGround/zeus-temple.jpg" />
+               </image>
+            </ImageView>
+            <Label alignment="CENTER" layoutX="314.0" layoutY="289.0" prefHeight="74.0" prefWidth="587.0" text="Combien êtes vous a jouer?" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="45.0" />
+               </font>
+            </Label>
+            <Button layoutX="417.0" layoutY="383.0" mnemonicParsing="false" onMouseClicked="#on2PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="2" />
+            <Button layoutX="487.0" layoutY="383.0" mnemonicParsing="false" onMouseClicked="#on3PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="3" />
+            <Button layoutX="557.0" layoutY="383.0" mnemonicParsing="false" onMouseClicked="#on4PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="4" />
+            <Button layoutX="627.0" layoutY="383.0" mnemonicParsing="false" onMouseClicked="#on5PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="5" />
+            <Button layoutX="701.0" layoutY="383.0" mnemonicParsing="false" onMouseClicked="#on6PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="6" />
+            <Button layoutX="775.0" layoutY="383.0" mnemonicParsing="false" onMouseClicked="#on7PlayerSelected" prefHeight="46.0" prefWidth="50.0" text="7" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
