--- a/src/main/resources/com/example/fim_7wonderarchjavafx/ConfigurePlayer.fxml
+++ b/src/main/resources/com/example/fim_7wonderarchjavafx/ConfigurePlayer.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
@@ -11,14 +12,18 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fim_7wonderarchjavafx.ConfigurePlayerController">
    <children>
-      <ImageView fx:id="wonderImageSlot" fitHeight="249.0" fitWidth="107.0" layoutX="126.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="wonderImageSlot" fitHeight="364.0" fitWidth="131.0" layoutX="120.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" />
       <TextField fx:id="SelectedName" layoutX="294.0" layoutY="164.0" promptText="Quel est votre nom" />
-      <Spinner fx:id="selectedAge" editable="true" layoutX="295.0" layoutY="201.0" />
+      <Spinner fx:id="selectedAge" cache="true" editable="true" layoutX="295.0" layoutY="201.0" AnchorPane.bottomAnchor="173.4">
+         <cursor>
+            <Cursor fx:constant="SE_RESIZE" />
+         </cursor>
+      </Spinner>
       <Label layoutX="295.0" layoutY="89.0" prefHeight="62.0" prefWidth="271.0" text="Quel est votre nom et votre Age Joueur?" wrapText="true">
          <font>
             <Font name="Leelawadee UI Semilight" size="18.0" />
          </font>
       </Label>
-      <Button layoutX="297.0" layoutY="274.0" mnemonicParsing="false" onMouseClicked="#onValidateClick" prefHeight="34.0" prefWidth="142.0" text="Valider" />
+      <Button layoutX="297.0" layoutY="274.0" mnemonicParsing="false" onAction="#onValidateClick" onMouseClicked="#onValidateClick" prefHeight="34.0" prefWidth="142.0" text="Valider" />
    </children>
 </AnchorPane>
