--- a/src/main/resources/com/example/fim_7wonderarchjavafx/Game-view.fxml
+++ b/src/main/resources/com/example/fim_7wonderarchjavafx/Game-view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fim_7wonderarchjavafx.GameController">
    <children>
-      <ImageView fx:id="boardDeck" fitHeight="139.0" fitWidth="81.0" layoutX="666.0" layoutY="142.0" onMouseClicked="#onBoardDeckClicked" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="boardDeckImage" fitHeight="139.0" fitWidth="81.0" layoutX="666.0" layoutY="142.0" onMouseClicked="#onBoardDeckClicked" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../images/cards/card-back/card-back-question.png" />
          </image>
